# django-green-migration

./: .coveragerc  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: unittest.yml
green_migration/: __init__.py
green_migration/management/commands/: green_migrate.py  pos_green_migrate.py
green_migration/tests/management/commands/: fake_temp_model.py  test_green_migrate.py  test_pos_green_migrate.py
tests/: settings.py
tests/management/commands/: test_green_migrate.py  test_pos_green_migrate.py
